# smonitor

./: .buildinfo  .buildinfo.bak  .codecov.yml  .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC_SMONITOR.md  SUPPORT.md  _generated_codes.html  _generated_signals.html  coverage.xml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  smonitor.config.html  smonitor.core.html  smonitor.emitters.html  smonitor.handlers.html  smonitor.html  smonitor.integrations.html  smonitor.policy.html
.github/: PULL_REQUEST_TEMPLATE.md
_modules/: index.html  smonitor.html
_sources/: _generated_codes.md.txt  _generated_signals.md.txt  modules.rst.txt  smonitor.config.rst.txt  smonitor.core.rst.txt  smonitor.emitters.rst.txt  smonitor.handlers.rst.txt  smonitor.integrations.rst.txt  smonitor.policy.rst.txt  smonitor.rst.txt
api/: index.html
benchmarks/: signal_disabled.py  signal_enabled.py
dev_guide/: README.md  api.md  architecture.md  event_model.md  implementation_plan.md  integration_notes.md
devguide/: README.md  api.md  architecture.md  collective_evidence_pack.md  discovery_and_adoption_strategy.md  implementation_plan.md  integration_notes.md  support_tier_protocol.md
devtools/: README.md  sync_smonitor_guide.py
docs/: Makefile  _gen_catalog.py  api.rst  bundles.rst  catalog.rst  codes.rst  conf.py  configuration.rst  cookbook.rst  examples.rst  index.md  index.rst  integration.rst  message_guide.rst  policy.rst  profiling.rst  schema_validation.rst  showcase.rst  troubleshooting.rst
smonitor/: __init__.py  _version.py  bundle.py  catalog.py  cli.py  docs_utils.py  profiling.py  validation.py
standards/: SMONITOR_END_USER_DOCS_ADOPTION_CHECKLIST.md  SMONITOR_END_USER_DOCS_SYNC_POLICY.md  SMONITOR_END_USER_DOCS_TEMPLATE.md  SMONITOR_END_USER_GUIDE_FOR_LIBRARIES.md  SMONITOR_END_USER_RESCUE_CARD.md  SMONITOR_GUIDE.md
tests/: conftest.py  test_agent_contract.py  test_api_contract.py  test_bundle.py  test_bundle_extended.py  test_catalog.py  test_catalog_structured_extra.py  test_cli.py  test_cli_config_strict.py  test_cli_extended.py  test_codes.py  test_config.py  test_config_extended.py  test_config_precedence.py  test_console_handler_extended.py  test_context_stack.py  test_core.py  test_discovery.py  test_docs_utils.py  test_emitters.py  test_emitters_extended.py  test_emitters_toggle.py  test_handlers.py  test_handlers_file_extended.py  test_handlers_profile.py  test_hardening.py  test_integrations.py  test_integrations_api_contract.py  (+22 more)
(+218 files in other folders)
