[project]
name = "smonitor"
dynamic = ["version"]
description = "SMonitor — Centralized diagnostic & telemetry system for the scientific Python stack"
readme = "README.md"
authors = [
  { name = "UIBCDF Development Team" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
rich = ["rich>=13"]

[project.urls]
Homepage = "https://github.com/uibcdf/smonitor"
Repository = "https://github.com/uibcdf/smonitor"
Documentation = "https://uibcdf.github.io/smonitor"

[build-system]
requires = ["setuptools>=68", "versioningit~=3.0" ,"wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "smonitor",
  "smonitor.core",
  "smonitor.emitters",
  "smonitor.handlers",
  "smonitor.config",
  "smonitor.policy",
  "smonitor.integrations",
  "smonitor.templates",
]

[tool.setuptools.package-data]
"smonitor.templates" = ["_smonitor.py", "README.md"]

[project.scripts]
smonitor = "smonitor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.versioningit]
default-version = "0.0.0+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "smonitor/_version.py"
